NavBar include SASS variables

--- a/src/assets/styles/_navi.sass
+++ b/src/assets/styles/_navi.sass
@@ -1,6 +1,11 @@
 $background_color: #b2be97
+$btn_font_family:"Agency FB"
+
+//navi bar top
 $btn_line_color: white
 $link_font_color:black
 $btn_font_size:1.3rem
+
+//navi bar left
 $hamburger_color:black
-$btn_font_family:"Agency FB"
+$hamburger_font_size:1.2rem
