Refactoring Chat template

--- a/src/assets/styles/_navi.sass
+++ b/src/assets/styles/_navi.sass
@@ -2,7 +2,7 @@ $background_color: #b2be97
 $btn_font_family:"Agency FB"
 
 //navi bar top
-$btn_line_color: white
+$btn_line_color: black
 $link_font_color:black
 $btn_font_size:1.3rem
 
