Create components for chat waiting list

--- a/src/assets/styles/normalize.css
+++ b/src/assets/styles/normalize.css
@@ -52,6 +52,9 @@ h4{
 h5{
     margin: 0;
 }
+p{
+    margin: 0;
+}
 
 /* Grouping content
    ========================================================================== */
