Style list item

--- a/src/assets/styles/normalize.css
+++ b/src/assets/styles/normalize.css
@@ -55,6 +55,9 @@ h5{
 p{
     margin: 0;
 }
+ul{
+    margin: 0;
+}
 
 /* Grouping content
    ========================================================================== */
